fix: flex alignement

--- a/apps/gauzy/src/app/pages/users/users.component.scss
+++ b/apps/gauzy/src/app/pages/users/users.component.scss
@@ -82,7 +82,7 @@
   nb-card-body {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     overflow: unset;
     max-height: calc(100vh - 22.4rem);
     border-radius: 0 0 nb-theme(border-radius) nb-theme(border-radius);
